# Collusion

./: .gitignore  .mcp.json  AGENT_MANAGER_README.md  CONTRIBUTING.md  LICENSE  README.md  README_REASONIX.md  REASONIX_COLLUSION.md  ROADMAP.md  batch_goal_runner.py  benchmark.py  benchmark_knowledge.py  benchmark_knowledge_result.json  benchmark_real_comparison.json  benchmark_real_comparison.py  benchmark_real_output.py  benchmark_result.json  benchmark_speed.py  benchmark_speed_result.json  benchmark_v1_comparison.json  benchmark_v1_comparison.py  blog_platform_result.json  collusion_roles.example.yaml  config.example.json  config.json  issues_archive.md  latest_task.txt  mc_resources.py  pyproject.toml  pyproject.toml.tmp.24960.65390a408dda  quick_test.txt  reasonix-dev.bat  refine_cycle.txt  refine_final.txt  report_mod_audit.md  requirements.txt  run_goal.py  setup.bat  setup.sh  start_mcp.bat  (+3 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/goals/: batch_fix_all.json  companion_manager_tests.json  mc_mod_audit_fix.json
data/: .gitignore  review_memory.json
data/agent_evolution/: profiles.json
data/agent_graph/: graph.json
data/asset_library/: assess_37058569_assess.json  assess_631248a4_assess.json  assess_669ee66d_assess.json  (+82 more)
docs/: DEVELOPMENT_PLAN.md  方案管理与知识库体系.md
parallel-mcp/: README.md  parallel_server.py  pyproject.toml
reasonix-skill/: ISSUE_DRAFT.md  ISSUE_FINAL.md  README.md  REASONIX_HEADLESS_PROPOSAL.md  collusion.skill.md
skills/: collusion-design.md
src/: agent_evolution.py  agent_graph.py  agent_manager.py  agents.py  behavior_review.py  blackboard.py  cache_prefix.py  child_agent.py  cli.py  evolution.py  goal_runner.py  mcp_server.py  mod_goals.py  models.py  orchestrator.py  parallel_server.py  prompts.py  reasonix_blackboard.py  render.py  role_config.py  scorer.py  structure_graph.py  tools_registry.py  vector_index.py  verification.py
tests/: conftest.py  test_blackboard.py  test_checkpoint.py  test_models.py  test_orchestrator.py  test_scorer.py  test_smoke.py  test_v040_features.py  test_v050_knowledge.py
tmp/: blackboard_verification.py  final_verification.py  pipeline_vs_single.py  real_multiagent_test.py
(+120 files in other folders)
