[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collusion-mcp"
version = "0.5.1"
description = "多视角协作引擎 — 通过多 Agent 并行提案、交叉审查、可行性强制收束，解决单 Agent 在方案设计阶段的意图丢失和过度设计问题"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Collusion Contributors"}
]
keywords = [
    "mcp", "ai", "agent", "orchestration", "brainstorming",
    "multi-agent", "code-review", "technical-design", "collusion"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.0.0",
    "mistune>=3.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nideweilaiya/Collusion"
Documentation = "https://github.com/nideweilaiya/Collusion#readme"
Repository = "https://github.com/nideweilaiya/Collusion"
Issues = "https://github.com/nideweilaiya/Collusion/issues"
Roadmap = "https://github.com/nideweilaiya/Collusion/blob/master/ROADMAP.md"

[project.scripts]
collusion-mcp = "src.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
src = ["templates/*.html", "templates/*.md"]
